# llm-practice

./: pyproject.toml
notebooks/: qna-in-one-hour.ipynb
